# abs-mcp-server

./: .env.template  .gitignore  Dockerfile  README.md  RELEASE_NOTES.md  deploy.sh  deploy_gcp.sh  dta.xml  main.py  pyproject.toml  requirements.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPREHENSIVE_TEST_QUESTIONS.md  CONTRIBUTING.md  DEPLOYMENT.md  TESTING.md  abs_dataset_catalog.json
examples/: explore_dataset.py  explore_perth_data.py  map_census.py  map_qa_datasets.py  map_qa_using_service.py  parse_abs_catalog.py  search_datasets.py
src/: abs_server.py
src/abs_mcp_server/: __init__.py  cli.py  config.py  sdmx_service.py  server.py  server_refactored_content.py
src/client/: app.py  example_queries.py  mcp_agent.py  topic_mapping.py
tests/: comprehensive_questions.py  establish_ground_truth.py  question_bank.py  test_agent.py  test_client.py  test_consistency.py  test_mcp_agent.py  test_randomized.py  test_server.py  test_server_features.py
tests/fixtures/: ground_truth.json
