[project]
name = "mcp-abs-dataset"
version = "0.1.0"
description = "MCP server for Australian Bureau of Statistics datasets"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
strict = true